# MyNotes

./: .gitignore  README.md
Bash/.ipynb_checkpoints/: bashProg1-checkpoint.ipynb
C/: C21_13-14.ipynb  C21_15.ipynb  C21_16.ipynb  C21_Notes_9-10.ipynb
C/.ipynb_checkpoints/: C21_11-12-checkpoint.ipynb  C21_13-checkpoint.ipynb  C21_15-checkpoint.ipynb  C21_8-10-checkpoint.ipynb
Cpp/: CppAcc_Notes_1-2.ipynb
Geant4/tesis/tesisConstruction/: CMakeLists.txt  construction.cc  construction.hh  generator.cc  sim.cc
Geant4/tesis/tesisConstruction/comOut/: LXePMTSD.hh  LXeScintHit.hh  LXeScintSD.hh  construction*.cc  construction*.hh
JS/PhysicsAnimations/: tut1.html  tut2.html  tut3.html
Julia/: ex1.jl
Py/.ipynb_checkpoints/: DotProd-checkpoint.ipynb
Py/ADExamples/: MonteCarlo_Integration.ipynb  Pi_Numerically.ipynb
Py/ClassesMrPS/: OOPClasses.ipynb
Py/MrPSPyTorch/: PyTorchCourse_3.ipynb
Py/PyTorchMrPS/: PyTorchCourse_1.ipynb  PyTorchCourse_2.ipynb  PyTorchCourse_3.ipynb  PyTorchCourse_4.ipynb
Py/ReportesPython1/: 0.3 FC_RMFG_23.08.2021.ipynb  0.4 FC_202066652_Reporte_25.08.2021.ipynb  0.5 FC_202066652_Reporte_26.08.2021.ipynb  0.6 FC_202066652_Reporte_30.08.2021.ipynb  0.7 FC_202066652_Reporte_06.09.2021.ipynb  0.8 FC_202066652_Reporte_08.09.2021.ipynb  0.9 FC_202066652_Reporte_09.09.2021.ipynb  1.0 FC_202066652_Reporte_13.09.2021.ipynb  1.2 FC_202066652_Reporte_20.09.2021.ipynb  1.3 FC_202066652_Reporte_22.09.2021.ipynb
R/: .RData  .Rhistory  MontecarloR.Rmd  MontecarloR_1.Rmd  MontecarloR_2.Rmd  MontecarloR_3.Rmd
ROOT/PyRoot/: kernelROOT.ipynb
(+133 files in other folders)
